created automated tests for addToCart

--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -10,8 +10,8 @@
   <script src="lib/jasmine-5.1.1/boot0.js"></script>
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
   <!-- Include the test scripts after booting Jasmine -->
-  <script type="module" src="moneyTest.js">
-  </script>
+  <script type="module" src="utils/moneyTest.js"></script>
+  <script type="module" src="data/cartTest.js"></script>
 </head>
 <body>
 </body>
