--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -12,8 +12,10 @@
   <!-- Include the test scripts after booting Jasmine -->
   <script type="module" src="utils/moneyTest.js"></script>
   <script type="module" src="data/cartTest.js"></script>
+  <script type="module" src="checkout/orderSummaryTest.js"></script>
 </head>
 <body>
+  <div class="js-test-container"></div>
 </body>
 </html>
 
