--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -13,6 +13,7 @@
   <script type="module" src="utils/moneyTest.js"></script>
   <script type="module" src="data/cartTest.js"></script>
   <script type="module" src="checkout/orderSummaryTest.js"></script>
+  <script type="module" src="data/productsTest.js"></script>
 </head>
 <body>
   <div class="js-test-container"></div>
